--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.1.2",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@swimlane/ngx-datatable": "^20.1.0",
     "jwt-decode": "^3.1.2",
     "ngx-toastr": "^16.0.2",
     "rxjs": "~7.5.0",
