--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@swimlane/ngx-datatable": "^20.1.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "ngx-toastr": "^16.0.2",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.8",
